--- a/pom.xml
+++ b/pom.xml
@@ -19,15 +19,11 @@ limitations under the License.
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.eclipsesource.gerrit.plugins.fileattachment</groupId>
-  <artifactId>fileattachment</artifactId>
+  <artifactId>fileattachment-api</artifactId>
   <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>fileattachment</name>
+  <name>fileattachment-api</name>
 
-  <properties>
-    <Gerrit-ApiType>plugin</Gerrit-ApiType>
-    <Gerrit-ApiVersion>2.10-rc0</Gerrit-ApiVersion>
-  </properties>
 
   <build>
     <plugins>
@@ -38,19 +34,8 @@ limitations under the License.
         <configuration>
           <archive>
             <manifestEntries>
-              <Gerrit-PluginName>fileattachment</Gerrit-PluginName>
-              <Gerrit-Module>com.eclipsesource.gerrit.plugins.fileattachment.Module</Gerrit-Module>
-              <Gerrit-SshModule>com.eclipsesource.gerrit.plugins.fileattachment.SshModule</Gerrit-SshModule>
-              <Gerrit-HttpModule>com.eclipsesource.gerrit.plugins.fileattachment.HttpModule</Gerrit-HttpModule>
-
               <Implementation-Vendor>EclipseSource Services GmbH</Implementation-Vendor>
               <Implementation-URL>https://github.com/theArchonius/gerrit-attachments</Implementation-URL>
-
-              <Implementation-Title>${Gerrit-ApiType} ${project.artifactId}</Implementation-Title>
-              <Implementation-Version>${project.version}</Implementation-Version>
-
-              <Gerrit-ApiType>${Gerrit-ApiType}</Gerrit-ApiType>
-              <Gerrit-ApiVersion>${Gerrit-ApiVersion}</Gerrit-ApiVersion>
             </manifestEntries>
           </archive>
         </configuration>
@@ -59,22 +44,23 @@ limitations under the License.
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>2.3.2</version>
         <configuration>
           <source>1.7</source>
           <target>1.7</target>
           <encoding>UTF-8</encoding>
+          <excludes>
+		    <exclude>com/eclipsesource/gerrit/plugins/fileattachment/*.java</exclude>
+		  </excludes>
         </configuration>
       </plugin>
     </plugins>
   </build>
 
   <dependencies>
-    <dependency>
-      <groupId>com.google.gerrit</groupId>
-      <artifactId>gerrit-${Gerrit-ApiType}-api</artifactId>
-      <version>${Gerrit-ApiVersion}</version>
-      <scope>provided</scope>
-    </dependency>
+  	<dependency>
+  		<groupId>org.glassfish.jersey.core</groupId>
+  		<artifactId>jersey-client</artifactId>
+  		<version>2.14</version>
+  	</dependency>
   </dependencies>
 </project>
