--- a/pom.xml
+++ b/pom.xml
@@ -67,5 +67,10 @@ limitations under the License.
   		<artifactId>gson</artifactId>
   		<version>2.3.1</version>
   	</dependency>
+  	<dependency>
+  		<groupId>commons-codec</groupId>
+  		<artifactId>commons-codec</artifactId>
+  		<version>1.10</version>
+  	</dependency>
   </dependencies>
 </project>
