- configures JUnit testing with maven & buck - adds JUnit test stubs

--- a/pom.xml
+++ b/pom.xml
@@ -72,5 +72,11 @@ limitations under the License.
   		<artifactId>commons-codec</artifactId>
   		<version>1.10</version>
   	</dependency>
+  	<dependency>
+  		<groupId>junit</groupId>
+  		<artifactId>junit</artifactId>
+  		<version>4.11</version>
+  		<scope>test</scope>
+  	</dependency>
   </dependencies>
 </project>
